# Linux-OS

./: .aiexclude  .editorconfig  .gitattributes  .gitignore  .ignore  .kilocodeignore  .markdownlint.json  .mdformat.toml  .mega-linter.yml  .pre-commit-config.yaml  .prettierrc.json  .shellcheckrc  .taplo.toml  .yamllint  AGENTS.md  CLAUDE.MD  CLAUDE.md  CachyOS-additional-patches  CachyOS-additional-patches.txt  DIETPI_F2FS_GUIDE.md  GEMINI.MD  GEMINI.md  Java.txt  List.txt  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  PLAN.md  PYTHON_OPTIMIZATIONS.md  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  REFACTOR_ANALYSIS.md  Searchxng.md  Shell-book.md  TODO.md  Tweaks.txt  USEFUL.MD  VALIDATION_REPORT.md  audit-scripts.sh  (+16 more)
.gemini/: config.yaml
.githooks/: README.md  pre-commit
.github/: AGENTS.md  CLAUDE.MD  FUNDING.yml  README.md  SECURITY.md  agents.yml  chat-modes.yml  claude-agents.yml  copilot-agents.yml  copilot-instructions.md  dependabot.yml  prompt-templates.yml  pull.yml  renovate.json
.opencode/: opencode.json
.qlty/: qlty.toml
Cachyos/: Apps.sh  AutoFDO.sh  AutoSetup.sh  Clean.sh  Debloat.sh  Filesystem.txt  Install.sh  Install2.sh  KVM.txt  Kernel.txt  Nvidia.txt  README.MD  README.md  Rank.sh  Sched-ext  Sched-ext.txt  Setup.sh  TODO.txt  Updates.sh  archmaint.sh  aur.sh  bleachbit.sh  cachyadd.sh  cachyos-autoinstall-plan.md  clean.sh  clean_system.sh  cleaners.txt  debloat.sh  debloat_system.sh  explicit-packages.txt  git-fetch.py  makepgk.conf  optimizer.sh  pacaria.sh  packages-aur.txt  packages-repo.txt  packages.txt  pp.sh  rank-mirrorlist.sh  rustbuild.sh  (+7 more)
Cachyos/Scripts/WIP/reddit/: README.md  account_scanner.py  demo.sh  pyproject.toml  reddit_flag_scanner.py  scan.sh
Linux-Settings/: .gitignore  Compiler.txt  Kernel.txt  Other.txt  Shell.sh  Shell.txt  Submodules.txt  bashrc  install.sh
lib/: ui.sh  (+10 more)
(+690 files in other folders)
