[project]
name = "account-scanner"
version = "1.0.1"
description = "Multi-source account scanner: Reddit toxicity + Sherlock OSINT"
requires-python = ">=3.10"
dependencies = ["praw", "httpx", "sherlock-project"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "black"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
