[project]
name = "account-scanner"
version = "1.1.0"
description = "Multi-source account scanner: Reddit toxicity + Sherlock OSINT"
requires-python = ">=3.10"
dependencies = ["httpx", "orjson", "praw", "sherlock-project", "uvloop"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "black"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".cache", ".var", "node_modules"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "TCH"]
ignore = []
