[project]
name = "account-scanner"
version = "1.2.0"
description = "Multi-source account scanner: Reddit toxicity + Sherlock OSINT (async)"
requires-python = ">=3.11"
dependencies = [
  "httpx[http2]",
  "orjson",
  "asyncpraw",
  "sherlock-project",
  "uvloop"
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "black"]

[tool.black]
line-length = 80

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 80
target-version = "py311"
exclude = [".git", ".cache", ".var", "node_modules"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "TCH"]
ignore = []
